Update project dependencies and improve error handling
- Upgrade Java version from 17 to 21 in pom.xml.
- Enhance error handling in Attendance and Grades components to provide more informative error messages.
- Refactor AttendanceController to handle DataIntegrityViolationException for better conflict management.
- Convert DTO classes (AuthResponse, CreateStudentRequest, LoginRequest, RegisterRequest) to use Java records for improved readability and conciseness.
- Update application properties to enable virtual threads for Java 21.

These changes improve the overall robustness and maintainability of the application.